<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".SettingsActivity">
    <ImageButton
        android:layout_width="60dp"
        android:src="@drawable/audio_dark"
        android:id="@+id/volume"
        android:background="@drawable/volume_shape"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:layout_height="60dp"
        android:contentDescription="@string/volume"
        android:onClick="volumeOnOff"
        android:layout_marginStart="100dp" />
    <Button
        android:id="@+id/sfx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sfx_on"
        android:background="@drawable/volume_shape"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="190dp"
        android:onClick="sfxOnOff"
        android:layout_marginStart="190dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"

        android:background="@drawable/back_shape_1"
        android:onClick="back"/>
    <Switch
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchTheme"
        android:showText="true"
        android:visibility="invisible"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:layout_marginStart="100dp"
        tools:targetApi="lollipop" />

</RelativeLayout>